{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 21,
  "lineage": "2630d3a3-61fa-30d7-8251-5c12a2ad586f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "our-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:internet-gateway/igw-06eca03233066591e",
            "id": "igw-06eca03233066591e",
            "owner_id": "233459467455",
            "tags": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-IGW"
            },
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06eca03233066591e",
            "id": "r-rtb-04329ea2b453da0841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04329ea2b453da084",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "our-public-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06eca03233066591e",
            "id": "r-rtb-0d4f550d9690719891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4f550d969071989",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.our-igw",
            "aws_route_table.our-public-route-table2",
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:route-table/rtb-00141432f935cedb3",
            "id": "rtb-00141432f935cedb3",
            "owner_id": "233459467455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-private-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:route-table/rtb-0919fc827a9254f9c",
            "id": "rtb-0919fc827a9254f9c",
            "owner_id": "233459467455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:route-table/rtb-04329ea2b453da084",
            "id": "rtb-04329ea2b453da084",
            "owner_id": "233459467455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "our-public-route-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:route-table/rtb-0d4f550d969071989",
            "id": "rtb-0d4f550d969071989",
            "owner_id": "233459467455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036733475cf5fa436",
            "route_table_id": "rtb-00141432f935cedb3",
            "subnet_id": "subnet-008bdae01d1d05a4d"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table",
            "aws_subnet.our-private-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-private-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031dd89ba336925fe",
            "route_table_id": "rtb-0919fc827a9254f9c",
            "subnet_id": "subnet-0272cb4eb1b5d2521"
          },
          "dependencies": [
            "aws_route_table.our-private-route-table2",
            "aws_subnet.our-private-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035cf2385feb8eeb2",
            "route_table_id": "rtb-04329ea2b453da084",
            "subnet_id": "subnet-0aae6dc4f4809aa3d"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table",
            "aws_subnet.our-public-subnet",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "our-public-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0036e44544b623d21",
            "route_table_id": "rtb-0d4f550d969071989",
            "subnet_id": "subnet-0239c1a1d62a9582f"
          },
          "dependencies": [
            "aws_route_table.our-public-route-table2",
            "aws_subnet.our-public-subnet2",
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "our-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:security-group/sg-0024df1a646162bdc",
            "description": "Our Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0024df1a646162bdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Our-Security-Group",
            "name_prefix": "",
            "owner_id": "233459467455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.our-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:subnet/subnet-008bdae01d1d05a4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008bdae01d1d05a4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233459467455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet"
            },
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:subnet/subnet-0272cb4eb1b5d2521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0272cb4eb1b5d2521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233459467455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Private-Subnet2"
            },
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:subnet/subnet-0aae6dc4f4809aa3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aae6dc4f4809aa3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233459467455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "our-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:subnet/subnet-0239c1a1d62a9582f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0239c1a1d62a9582f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233459467455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-Public-Subnet"
            },
            "vpc_id": "vpc-0cda7b2120075d37d"
          },
          "dependencies": [
            "aws_vpc.our-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "our-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:233459467455:vpc/vpc-0cda7b2120075d37d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d08a87bb8da87e5c",
            "default_route_table_id": "rtb-0a7d4c192e39e7495",
            "default_security_group_id": "sg-07b8b9dd7ed76701e",
            "dhcp_options_id": "dopt-005df988833347154",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cda7b2120075d37d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7d4c192e39e7495",
            "owner_id": "233459467455",
            "tags": {
              "Environment": "dev",
              "Name": "Our-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Our-VPC"
            }
          }
        }
      ]
    }
  ]
}